# next2024.2

./: .gitignore  pyproject.toml
projeto/: compose.yml
projeto/client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
projeto/client/src/: App.jsx  AppRoutes.jsx
projeto/client/src/components/: AppButton.jsx  AppInput.jsx  AppLogo.jsx  ContactCard.jsx  EmptyList.jsx
projeto/client/src/pages/: CreateContactPage.jsx  HomePage.jsx  NotFound.jsx
projeto/client/src/utils/: routes.js  styles.js
projeto/server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
projeto/server/app/: api_models.py  app.py  db_models.py  db_utils.py
projeto/static/: index.html
projeto/static/assets/: index-0bRlJggK.js
respostas/aula02/: desafio.py  fastapi_01_resposta.py  fastapi_02_resposta.py  fastapi_03_resposta.py  fastapi_04_resposta.py  json_schema.py  pydantic_01_resposta.py  pydantic_02_resposta.py  pydantic_03_resposta.py  pydantic_04_resposta.py
respostas/aula03/: crud.py  crud_router.py
respostas/aula05/: crud.py  crud_resposta.py  dinamica01_mysql.py  dinamica01_postgres.py  dinamica02_postgres.py  pratica02.py
respostas/aula06/: jwt_utils.py
respostas/aula07/: jwt_utils.py
respostas/aula08/: login.html
respostas/aula09/: account.html  auth_api.py  cors.py  db_sql.py  middleware.py
respostas/aula09/api_router/: app.py
respostas/aula09/api_router/routers/: items.py  users.py  v1.py  v2.py
respostas/aula10/: main.py  new.Dockerfile
respostas/aula11/: Dockerfile
